@@ -38,8 +38,8 @@
       <para>Most Linux distributions are backed by a for-profit company
       that develops them and sells them under some kind of commercial
       scheme. Examples include <emphasis>Ubuntu</emphasis>, mainly
-      developed by <emphasis>Canonical Ltd.</emphasis>; <emphasis>Mandriva
-      Linux</emphasis>, by French company <emphasis>Mandriva SA</emphasis>;
+      developed by <emphasis>Canonical Ltd.</emphasis>; <emphasis>Red Hat
+      Enterprise Linux</emphasis>, by <emphasis>Red Hat</emphasis>;
       and <emphasis>Suse Linux</emphasis>, maintained and made commercially
       available by <emphasis>Novell</emphasis>.</para>
 
@@ -58,7 +58,7 @@
     years; it mostly
     benefits the distributions supported by a real marketing department —
     in other words, company-backed distributions (Ubuntu, Red Hat,
-    SUSE, Mandriva, and so on). But Debian is far from being a marginal
+    SUSE, and so on). But Debian is far from being a marginal
     distribution; multiple studies have shown over the years that it is
     widely used both on servers and on desktops. This
     is particularly true among webservers where Debian is the leading
