@@ -3,6 +3,9 @@ debian-handbook (9.20160204) UNRELEASED; urgency=medium
   * Some updates to chapter 13 by David Richfield. Closes: #813153
   * Misc improvements to Japanese translation. Closes: #820584
     Thanks to Osamu Aoki and Ryuunosuke AYANOKOUZI.
+  * Mention Red Hat in the list of commercial Linux distributions.
+    Closes: #820586 Thanks to Osamu Aoki.
+    Drop Mandriva at the same time (the company no longer exists).
 
  -- Raphaël Hertzog <hertzog@debian.org>  Thu, 04 Feb 2016 16:27:26 +0100
 
